Added the csv with the opinions only

--- a/OpenAi/Classify_amlo.ipynb
+++ b/OpenAi/Classify_amlo.ipynb
@@ -2,12 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 607,
+   "execution_count": 1,
    "id": "9d96cd2b",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-19T03:01:04.273007Z",
-     "start_time": "2023-11-19T03:01:04.178320Z"
+     "end_time": "2023-11-25T19:24:53.598701Z",
+     "start_time": "2023-11-25T19:24:51.248516Z"
     }
    },
    "outputs": [
@@ -36,6 +36,8 @@
        "      <th>Clasificacion</th>\n",
        "      <th>new_classification</th>\n",
        "      <th>classification_spanish</th>\n",
+       "      <th>clean</th>\n",
+       "      <th>vector</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -45,6 +47,8 @@
        "      <td>saludos</td>\n",
        "      <td>Support</td>\n",
        "      <td>apoyo</td>\n",
+       "      <td>buenos días feliz año deseamos vaya bien mexic...</td>\n",
+       "      <td>[ 7.19675303e-01  8.39907408e-01 -9.76106763e-...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -52,6 +56,8 @@
        "      <td>NaN</td>\n",
        "      <td>Health</td>\n",
        "      <td>salud</td>\n",
+       "      <td>vamos iniciar semana hacemos siempre lunes qui...</td>\n",
+       "      <td>[-9.91302952e-02  8.24222326e-01 -3.38856429e-...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -59,6 +65,8 @@
        "      <td>apoyo</td>\n",
        "      <td>Support</td>\n",
        "      <td>apoyo</td>\n",
+       "      <td>vamos informar primer día hábil año 2023 dispe...</td>\n",
+       "      <td>[ 0.24504176  0.97794175  0.8164164  -1.316901...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -66,6 +74,8 @@
        "      <td>apoyo</td>\n",
        "      <td>Support</td>\n",
        "      <td>apoyo</td>\n",
+       "      <td>ahora va informar optando calendario acuerdo l...</td>\n",
+       "      <td>[ 4.9537131e-01  8.0378938e-01  2.1846922e-01 ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -73,9 +83,13 @@
        "      <td>apoyo</td>\n",
        "      <td>Support</td>\n",
        "      <td>apoyo</td>\n",
+       "      <td>etapa combinan bancos particulares comerciales...</td>\n",
+       "      <td>[ 0.18309724  1.2687184   0.7949024  -1.846111...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
@@ -87,6 +101,8 @@
        "      <td>NaN</td>\n",
        "      <td>Opinion</td>\n",
        "      <td>opinion</td>\n",
+       "      <td>presidentes américa sur amigo argentina gobier...</td>\n",
+       "      <td>[ 1.3192350e+00  4.9044394e-01 -3.4768179e-01 ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>21722</th>\n",
@@ -94,6 +110,8 @@
        "      <td>NaN</td>\n",
        "      <td>Corruption</td>\n",
        "      <td>corrupcion</td>\n",
+       "      <td>habla crisis argentina luego toda culpa gobier...</td>\n",
+       "      <td>[ 1.50993967e+00  9.18410122e-01 -7.97233939e-...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>21723</th>\n",
@@ -101,6 +119,8 @@
        "      <td>NaN</td>\n",
        "      <td>Support</td>\n",
        "      <td>apoyo</td>\n",
+       "      <td>entonces firmó carta enviamos firmó presidente...</td>\n",
+       "      <td>[ 1.047604    0.184356   -0.7643434  -1.752564...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>21724</th>\n",
@@ -108,6 +128,8 @@
        "      <td>NaN</td>\n",
        "      <td>Support</td>\n",
        "      <td>apoyo</td>\n",
+       "      <td>ayudando hace falta apoye argentina además bueno</td>\n",
+       "      <td>[ 9.56562877e-01  1.70733139e-01 -1.05751717e+...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>21725</th>\n",
@@ -115,10 +137,12 @@
        "      <td>NaN</td>\n",
        "      <td>Opposition</td>\n",
        "      <td>competencia</td>\n",
+       "      <td>pues podemos hacerlo organismos financieros in...</td>\n",
+       "      <td>[ 6.41029626e-02  1.37183988e+00  4.38047975e-...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>21726 rows × 4 columns</p>\n",
+       "<p>21726 rows × 6 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -135,23 +159,49 @@
        "21724  Y hemos estado ayudando en todo, y hace falta ...           NaN   \n",
        "21725   Pues no podemos hacerlo, para eso están los o...           NaN   \n",
        "\n",
-       "      new_classification classification_spanish  \n",
-       "0                Support                  apoyo  \n",
-       "1                 Health                  salud  \n",
-       "2                Support                  apoyo  \n",
-       "3                Support                  apoyo  \n",
-       "4                Support                  apoyo  \n",
-       "...                  ...                    ...  \n",
-       "21721            Opinion                opinion  \n",
-       "21722         Corruption             corrupcion  \n",
-       "21723            Support                  apoyo  \n",
-       "21724            Support                  apoyo  \n",
-       "21725         Opposition            competencia  \n",
+       "      new_classification classification_spanish  \\\n",
+       "0                Support                  apoyo   \n",
+       "1                 Health                  salud   \n",
+       "2                Support                  apoyo   \n",
+       "3                Support                  apoyo   \n",
+       "4                Support                  apoyo   \n",
+       "...                  ...                    ...   \n",
+       "21721            Opinion                opinion   \n",
+       "21722         Corruption             corrupcion   \n",
+       "21723            Support                  apoyo   \n",
+       "21724            Support                  apoyo   \n",
+       "21725         Opposition            competencia   \n",
        "\n",
-       "[21726 rows x 4 columns]"
+       "                                                   clean  \\\n",
+       "0      buenos días feliz año deseamos vaya bien mexic...   \n",
+       "1      vamos iniciar semana hacemos siempre lunes qui...   \n",
+       "2      vamos informar primer día hábil año 2023 dispe...   \n",
+       "3      ahora va informar optando calendario acuerdo l...   \n",
+       "4      etapa combinan bancos particulares comerciales...   \n",
+       "...                                                  ...   \n",
+       "21721  presidentes américa sur amigo argentina gobier...   \n",
+       "21722  habla crisis argentina luego toda culpa gobier...   \n",
+       "21723  entonces firmó carta enviamos firmó presidente...   \n",
+       "21724   ayudando hace falta apoye argentina además bueno   \n",
+       "21725  pues podemos hacerlo organismos financieros in...   \n",
+       "\n",
+       "                                                  vector  \n",
+       "0      [ 7.19675303e-01  8.39907408e-01 -9.76106763e-...  \n",
+       "1      [-9.91302952e-02  8.24222326e-01 -3.38856429e-...  \n",
+       "2      [ 0.24504176  0.97794175  0.8164164  -1.316901...  \n",
+       "3      [ 4.9537131e-01  8.0378938e-01  2.1846922e-01 ...  \n",
+       "4      [ 0.18309724  1.2687184   0.7949024  -1.846111...  \n",
+       "...                                                  ...  \n",
+       "21721  [ 1.3192350e+00  4.9044394e-01 -3.4768179e-01 ...  \n",
+       "21722  [ 1.50993967e+00  9.18410122e-01 -7.97233939e-...  \n",
+       "21723  [ 1.047604    0.184356   -0.7643434  -1.752564...  \n",
+       "21724  [ 9.56562877e-01  1.70733139e-01 -1.05751717e+...  \n",
+       "21725  [ 6.41029626e-02  1.37183988e+00  4.38047975e-...  \n",
+       "\n",
+       "[21726 rows x 6 columns]"
       ]
      },
-     "execution_count": 607,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1276,12 +1326,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 620,
+   "execution_count": 9,
    "id": "cc8adb14",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-19T03:01:18.259125Z",
-     "start_time": "2023-11-19T03:01:18.228973Z"
+     "end_time": "2023-11-25T19:30:39.239291Z",
+     "start_time": "2023-11-25T19:30:39.215357Z"
     }
    },
    "outputs": [
@@ -1307,138 +1357,131 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>Texto</th>\n",
-       "      <th>Clasificacion</th>\n",
-       "      <th>new_classification</th>\n",
        "      <th>classification_spanish</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Buenos días y feliz año. Deseamos que nos vay...</td>\n",
-       "      <td>saludos</td>\n",
-       "      <td>Support</td>\n",
-       "      <td>apoyo</td>\n",
+       "      <th>11</th>\n",
+       "      <td>Quiero decir que tenemos muy buena relación co...</td>\n",
+       "      <td>opinion</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Vamos a iniciar la semana como lo hacemos siem...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Health</td>\n",
-       "      <td>salud</td>\n",
+       "      <th>22</th>\n",
+       "      <td>Porque tenemos todo ese bagaje, todo ese legad...</td>\n",
+       "      <td>opinion</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>También vamos a informar este primer día hábil...</td>\n",
-       "      <td>apoyo</td>\n",
-       "      <td>Support</td>\n",
-       "      <td>apoyo</td>\n",
+       "      <th>23</th>\n",
+       "      <td>No. Sí, en la mayoría de los pueblos del mundo...</td>\n",
+       "      <td>opinion</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Y ahora se va a informar porque se está optand...</td>\n",
-       "      <td>apoyo</td>\n",
-       "      <td>Support</td>\n",
-       "      <td>apoyo</td>\n",
+       "      <th>39</th>\n",
+       "      <td>Me hablaste del bien común, le digo. Busca el ...</td>\n",
+       "      <td>opinion</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>En esta etapa se combinan los bancos particula...</td>\n",
-       "      <td>apoyo</td>\n",
-       "      <td>Support</td>\n",
-       "      <td>apoyo</td>\n",
+       "      <th>40</th>\n",
+       "      <td>Y sí le dije a la gente humilde, a la gente qu...</td>\n",
+       "      <td>opinion</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21696</th>\n",
+       "      <td>Acuérdense, a alguien le iba mal en la polític...</td>\n",
+       "      <td>opinion</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21706</th>\n",
+       "      <td>Pero aquí entra mucho lo de la cuestión tambié...</td>\n",
+       "      <td>opinion</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21712</th>\n",
+       "      <td>Y, dos, cómo se hace una programación para que...</td>\n",
+       "      <td>opinion</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21713</th>\n",
+       "      <td>Ahora voy a tener la oportunidad porque, imagí...</td>\n",
+       "      <td>opinion</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>21721</th>\n",
        "      <td>Cuando los presidentes de América del Sur, alg...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Opinion</td>\n",
        "      <td>opinion</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>21722</th>\n",
-       "      <td>Porque nada más se habla de la crisis de Argen...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Corruption</td>\n",
-       "      <td>corrupcion</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>21723</th>\n",
-       "      <td>Entonces, sí se firmó la carta, la enviamos. L...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Support</td>\n",
-       "      <td>apoyo</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>21724</th>\n",
-       "      <td>Y hemos estado ayudando en todo, y hace falta ...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Support</td>\n",
-       "      <td>apoyo</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>21725</th>\n",
-       "      <td>Pues no podemos hacerlo, para eso están los o...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Opposition</td>\n",
-       "      <td>competencia</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>21726 rows × 4 columns</p>\n",
+       "<p>5091 rows × 2 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                                   Texto Clasificacion  \\\n",
-       "0       Buenos días y feliz año. Deseamos que nos vay...       saludos   \n",
-       "1      Vamos a iniciar la semana como lo hacemos siem...           NaN   \n",
-       "2      También vamos a informar este primer día hábil...         apoyo   \n",
-       "3      Y ahora se va a informar porque se está optand...         apoyo   \n",
-       "4      En esta etapa se combinan los bancos particula...         apoyo   \n",
-       "...                                                  ...           ...   \n",
-       "21721  Cuando los presidentes de América del Sur, alg...           NaN   \n",
-       "21722  Porque nada más se habla de la crisis de Argen...           NaN   \n",
-       "21723  Entonces, sí se firmó la carta, la enviamos. L...           NaN   \n",
-       "21724  Y hemos estado ayudando en todo, y hace falta ...           NaN   \n",
-       "21725   Pues no podemos hacerlo, para eso están los o...           NaN   \n",
+       "                                                   Texto  \\\n",
+       "11     Quiero decir que tenemos muy buena relación co...   \n",
+       "22     Porque tenemos todo ese bagaje, todo ese legad...   \n",
+       "23     No. Sí, en la mayoría de los pueblos del mundo...   \n",
+       "39     Me hablaste del bien común, le digo. Busca el ...   \n",
+       "40     Y sí le dije a la gente humilde, a la gente qu...   \n",
+       "...                                                  ...   \n",
+       "21696  Acuérdense, a alguien le iba mal en la polític...   \n",
+       "21706  Pero aquí entra mucho lo de la cuestión tambié...   \n",
+       "21712  Y, dos, cómo se hace una programación para que...   \n",
+       "21713  Ahora voy a tener la oportunidad porque, imagí...   \n",
+       "21721  Cuando los presidentes de América del Sur, alg...   \n",
        "\n",
-       "      new_classification classification_spanish  \n",
-       "0                Support                  apoyo  \n",
-       "1                 Health                  salud  \n",
-       "2                Support                  apoyo  \n",
-       "3                Support                  apoyo  \n",
-       "4                Support                  apoyo  \n",
-       "...                  ...                    ...  \n",
-       "21721            Opinion                opinion  \n",
-       "21722         Corruption             corrupcion  \n",
-       "21723            Support                  apoyo  \n",
-       "21724            Support                  apoyo  \n",
-       "21725         Opposition            competencia  \n",
+       "      classification_spanish  \n",
+       "11                   opinion  \n",
+       "22                   opinion  \n",
+       "23                   opinion  \n",
+       "39                   opinion  \n",
+       "40                   opinion  \n",
+       "...                      ...  \n",
+       "21696                opinion  \n",
+       "21706                opinion  \n",
+       "21712                opinion  \n",
+       "21713                opinion  \n",
+       "21721                opinion  \n",
        "\n",
-       "[21726 rows x 4 columns]"
+       "[5091 rows x 2 columns]"
       ]
      },
-     "execution_count": 620,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "\n",
-    "df"
+    "de_opinion = df[df['classification_spanish'] == 'opinion']\n",
+    "de_opinion = de_opinion[['Texto','classification_spanish']]\n",
+    "de_opinion"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "f6a8fe8c",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-11-25T19:30:39.394301Z",
+     "start_time": "2023-11-25T19:30:39.356757Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "de_opinion.to_csv('amlo_clasify_opinion.csv', index=False)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f6a8fe8c",
+   "id": "53e03317",
    "metadata": {},
    "outputs": [],
    "source": []
