--- a/OpenAi/Classify_amlo.ipynb
+++ b/OpenAi/Classify_amlo.ipynb
@@ -614,7 +614,7 @@
     "    \"Migration\": \"exterior\",\n",
     "    \n",
     "    \n",
-    "    \"Oposición\": \"oposicion\",\n",
+    "    \"Oposición\": \"competencia\",\n",
     "    \"Vivienda\": \"construccion\",\n",
     "    \"Seguridad\": \"seguridad\",\n",
     "    \"Historia\": \"historia\",\n",
@@ -1481,7 +1481,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "53e03317",
+   "id": "2d2b6c5b",
    "metadata": {},
    "outputs": [],
    "source": []
