Added the vector and clean to the dataset of balanced data

--- a/OpenAi/Classify_amlo.ipynb
+++ b/OpenAi/Classify_amlo.ipynb
@@ -2028,18 +2028,402 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 79,
    "id": "0ed59199",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-26T05:48:28.735053Z",
-     "start_time": "2023-11-26T05:48:28.577322Z"
+     "end_time": "2023-11-26T05:51:35.707292Z",
+     "start_time": "2023-11-26T05:51:35.549430Z"
     }
    },
    "outputs": [],
    "source": [
     "df.to_csv('amlo_clasify_chatpgt_10k.csv', index=False)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2661c502",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-11-26T05:51:44.847637Z",
+     "start_time": "2023-11-26T05:51:44.822898Z"
+    }
+   },
+   "source": [
+    "# Add vector and clean"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "id": "cbae0f22",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-11-26T05:53:02.331306Z",
+     "start_time": "2023-11-26T05:52:49.837214Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "import spacy \n",
+    "from spacy import displacy \n",
+    "\n",
+    "nlp = spacy.load(\"es_core_news_lg\")\n",
+    "import nltk\n",
+    "import re\n",
+    "from nltk import word_tokenize\n",
+    "from nltk.corpus import stopwords\n",
+    "\n",
+    "stop_words_en= stopwords.words('spanish')\n",
+    "from nltk.stem.wordnet import WordNetLemmatizer\n",
+    "\n",
+    "lemmatizer = WordNetLemmatizer()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "id": "860f47d0",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-11-26T05:53:02.346937Z",
+     "start_time": "2023-11-26T05:53:02.331306Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "def clean(texto):\n",
+    "    texto = texto.lower()\n",
+    "    texto = re.sub(r'([^0-9A-Za-z-À-ÿ \\t])','', texto)\n",
+    "    texto = word_tokenize(texto)\n",
+    "    texto = [palabra for palabra in texto if palabra not in stop_words_en]\n",
+    "    texto = [lemmatizer.lemmatize(palabra) for palabra in texto]\n",
+    "    texto = ' '.join(texto)\n",
+    "    return texto\n",
+    "\n",
+    "def vectorize_clean(texto):\n",
+    "    texto = texto.lower()\n",
+    "    texto = re.sub(r'([^0-9A-Za-z-À-ÿ \\t])','', texto)\n",
+    "    texto = word_tokenize(texto)\n",
+    "    texto = [palabra for palabra in texto if palabra not in stop_words_en]\n",
+    "    texto = [lemmatizer.lemmatize(palabra) for palabra in texto]\n",
+    "    texto = ' '.join(texto)\n",
+    "    texto = nlp(texto).vector\n",
+    "    return texto\n",
+    "\n",
+    "def vectorize(texto):\n",
+    "    texto = nlp(texto).vector\n",
+    "    return texto\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "id": "ebd9e928",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-11-26T05:59:08.677288Z",
+     "start_time": "2023-11-26T05:56:42.197197Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\claud\\AppData\\Local\\Temp\\ipykernel_17496\\1192305580.py:1: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  df['clean'] = df['Texto'].apply(clean)\n",
+      "C:\\Users\\claud\\AppData\\Local\\Temp\\ipykernel_17496\\1192305580.py:2: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  df['vector'] = df['clean'].apply(vectorize)\n"
+     ]
+    }
+   ],
+   "source": [
+    "df['clean'] = df['Texto'].apply(clean)\n",
+    "df['vector'] = df['clean'].apply(vectorize)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "id": "81ba7f02",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-11-26T05:59:36.536394Z",
+     "start_time": "2023-11-26T05:59:36.489449Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 10800 entries, 0 to 10799\n",
+      "Data columns (total 6 columns):\n",
+      " #   Column                  Non-Null Count  Dtype \n",
+      "---  ------                  --------------  ----- \n",
+      " 0   Texto                   10800 non-null  object\n",
+      " 1   Clasificacion           219 non-null    object\n",
+      " 2   new_classification      10800 non-null  object\n",
+      " 3   classification_spanish  10800 non-null  object\n",
+      " 4   clean                   10800 non-null  object\n",
+      " 5   vector                  10800 non-null  object\n",
+      "dtypes: object(6)\n",
+      "memory usage: 506.4+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "id": "0ee03dd5",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-11-26T06:01:14.048770Z",
+     "start_time": "2023-11-26T06:00:38.714342Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "df.to_csv('amlo_clasify_chatpgt_10k.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "id": "ed3b2a51",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-11-26T06:02:08.288576Z",
+     "start_time": "2023-11-26T06:02:07.236652Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv('amlo_clasify_chatpgt_10k.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "id": "23cfb0b2",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-11-26T06:02:10.580270Z",
+     "start_time": "2023-11-26T06:02:10.548610Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Texto</th>\n",
+       "      <th>Clasificacion</th>\n",
+       "      <th>new_classification</th>\n",
+       "      <th>classification_spanish</th>\n",
+       "      <th>clean</th>\n",
+       "      <th>vector</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Ha sido muy importante, mucho muy importante t...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Opposition</td>\n",
+       "      <td>competencia</td>\n",
+       "      <td>sido importante importante procedimiento ejemp...</td>\n",
+       "      <td>[ 5.76126635e-01  7.71860301e-01  1.19198859e-...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>¿Qué espero del jurado? Vamos a esperar. No q...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Opposition</td>\n",
+       "      <td>competencia</td>\n",
+       "      <td>espero jurado vamos esperar quiero hacer ningú...</td>\n",
+       "      <td>[-9.68100846e-01  2.17017829e-01 -8.47548902e-...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Es muy distinto lo de nuestro movimiento. Aquí...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Opposition</td>\n",
+       "      <td>competencia</td>\n",
+       "      <td>distinto movimiento aquí movimiento hablando a...</td>\n",
+       "      <td>[ 0.6095007   0.47429207 -0.3994987  -0.942479...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Y sí es un plazo de un mes, ojalá y recapacite...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Opposition</td>\n",
+       "      <td>competencia</td>\n",
+       "      <td>plazo me ojalá recapaciten bueno regresaramexi...</td>\n",
+       "      <td>[ 0.46241307  0.4259419  -0.6344976  -0.127336...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Entonces, llega él con la bandera del cambio y...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Opposition</td>\n",
+       "      <td>competencia</td>\n",
+       "      <td>entonces llega bandera cambio hace romper esqu...</td>\n",
+       "      <td>[ 7.66866982e-01  1.09749711e+00 -5.95332265e-...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10795</th>\n",
+       "      <td>Y en el caso de actividades económicas dar fac...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Foreign</td>\n",
+       "      <td>exterior</td>\n",
+       "      <td>caso actividades económicas dar facilidades pe...</td>\n",
+       "      <td>[-0.1949131   0.98550135  0.27855945 -1.081047...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10796</th>\n",
+       "      <td>Pero, por ejemplo, en esto de declarar a los n...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Foreign</td>\n",
+       "      <td>exterior</td>\n",
+       "      <td>ejemplo declarar narcotraficantes terroristas ...</td>\n",
+       "      <td>[ 2.24158928e-01  8.63957047e-01 -1.07975042e+...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10797</th>\n",
+       "      <td>Y luego, porque lo invité, quiere venir él, ta...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Foreign</td>\n",
+       "      <td>exterior</td>\n",
+       "      <td>luego invité quiere venir mandó decir si cuánd...</td>\n",
+       "      <td>[ 0.2898054   0.5512161  -0.57648766 -0.768501...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10798</th>\n",
+       "      <td>―Le digo: pues tenemos un mitin, venimos a def...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Foreign</td>\n",
+       "      <td>exterior</td>\n",
+       "      <td>digo pues mitin venimos defender migrantes tra...</td>\n",
+       "      <td>[ 7.82611668e-01  9.04372454e-01 -9.60167468e-...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10799</th>\n",
+       "      <td>En el caso de México, afortunadamente ya no ha...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Foreign</td>\n",
+       "      <td>exterior</td>\n",
+       "      <td>caso méxico afortunadamente número corriente m...</td>\n",
+       "      <td>[ 0.94499576  0.58817405 -0.55828065 -1.423471...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>10800 rows × 6 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                   Texto Clasificacion  \\\n",
+       "0      Ha sido muy importante, mucho muy importante t...           NaN   \n",
+       "1       ¿Qué espero del jurado? Vamos a esperar. No q...           NaN   \n",
+       "2      Es muy distinto lo de nuestro movimiento. Aquí...           NaN   \n",
+       "3      Y sí es un plazo de un mes, ojalá y recapacite...           NaN   \n",
+       "4      Entonces, llega él con la bandera del cambio y...           NaN   \n",
+       "...                                                  ...           ...   \n",
+       "10795  Y en el caso de actividades económicas dar fac...           NaN   \n",
+       "10796  Pero, por ejemplo, en esto de declarar a los n...           NaN   \n",
+       "10797  Y luego, porque lo invité, quiere venir él, ta...           NaN   \n",
+       "10798  ―Le digo: pues tenemos un mitin, venimos a def...           NaN   \n",
+       "10799  En el caso de México, afortunadamente ya no ha...           NaN   \n",
+       "\n",
+       "      new_classification classification_spanish  \\\n",
+       "0             Opposition            competencia   \n",
+       "1             Opposition            competencia   \n",
+       "2             Opposition            competencia   \n",
+       "3             Opposition            competencia   \n",
+       "4             Opposition            competencia   \n",
+       "...                  ...                    ...   \n",
+       "10795            Foreign               exterior   \n",
+       "10796            Foreign               exterior   \n",
+       "10797            Foreign               exterior   \n",
+       "10798            Foreign               exterior   \n",
+       "10799            Foreign               exterior   \n",
+       "\n",
+       "                                                   clean  \\\n",
+       "0      sido importante importante procedimiento ejemp...   \n",
+       "1      espero jurado vamos esperar quiero hacer ningú...   \n",
+       "2      distinto movimiento aquí movimiento hablando a...   \n",
+       "3      plazo me ojalá recapaciten bueno regresaramexi...   \n",
+       "4      entonces llega bandera cambio hace romper esqu...   \n",
+       "...                                                  ...   \n",
+       "10795  caso actividades económicas dar facilidades pe...   \n",
+       "10796  ejemplo declarar narcotraficantes terroristas ...   \n",
+       "10797  luego invité quiere venir mandó decir si cuánd...   \n",
+       "10798  digo pues mitin venimos defender migrantes tra...   \n",
+       "10799  caso méxico afortunadamente número corriente m...   \n",
+       "\n",
+       "                                                  vector  \n",
+       "0      [ 5.76126635e-01  7.71860301e-01  1.19198859e-...  \n",
+       "1      [-9.68100846e-01  2.17017829e-01 -8.47548902e-...  \n",
+       "2      [ 0.6095007   0.47429207 -0.3994987  -0.942479...  \n",
+       "3      [ 0.46241307  0.4259419  -0.6344976  -0.127336...  \n",
+       "4      [ 7.66866982e-01  1.09749711e+00 -5.95332265e-...  \n",
+       "...                                                  ...  \n",
+       "10795  [-0.1949131   0.98550135  0.27855945 -1.081047...  \n",
+       "10796  [ 2.24158928e-01  8.63957047e-01 -1.07975042e+...  \n",
+       "10797  [ 0.2898054   0.5512161  -0.57648766 -0.768501...  \n",
+       "10798  [ 7.82611668e-01  9.04372454e-01 -9.60167468e-...  \n",
+       "10799  [ 0.94499576  0.58817405 -0.55828065 -1.423471...  \n",
+       "\n",
+       "[10800 rows x 6 columns]"
+      ]
+     },
+     "execution_count": 99,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
   }
  ],
  "metadata": {
